--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "test": "npm run unit"
   },
   "dependencies": {
+    "fecha": "^2.3.1",
+    "pug": "^2.0.0-rc.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue": "^2.3.3",
     "vue-form-generator": "^2.0.0",
     "vue-router": "^2.6.0",
